--- a/src/main/webapp/WEB-INF/views/layout.html
+++ b/src/main/webapp/WEB-INF/views/layout.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title layout:title-pattern="$CONTENT_TITLE - BookStore24">BookStore24</title>
+    <title layout:title-pattern="$CONTENT_TITLE - Shopping Mall">Shopping Mall</title>
 
     <!-- Bootstrap, FontAwesome, Custom CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
