fix : insert_data.sql 수정, css 수정

--- a/src/main/webapp/WEB-INF/views/fragments/header.html
+++ b/src/main/webapp/WEB-INF/views/fragments/header.html
@@ -7,7 +7,7 @@
     <div class="container">
         <!-- Brand -->
         <a class="navbar-brand" th:href="@{/}">
-            <i class="fas fa-book"></i> BookStore24
+            <i class="fas fa-gift"></i> Shopping Mall
         </a>
 
         <!-- User Menu -->
@@ -50,7 +50,7 @@
      th:if="${#httpServletRequest != null and #httpServletRequest.requestURI.startsWith('/admin')}">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/admin}">
-            <i class="fas fa-cogs"></i> BookStore24 관리자
+            <i class="fas fa-cogs"></i> Shopping Mall 관리자
         </a>
 
         <div class="navbar-nav ms-auto">
