--- a/src/main/webapp/WEB-INF/views/fragments/footer.html
+++ b/src/main/webapp/WEB-INF/views/fragments/footer.html
@@ -5,8 +5,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3">
-                <h5>BookStore24</h5>
-                <p class="text-muted">대한민국 최대 온라인 서점<br>다양한 도서와 함께하는 독서 생활</p>
+                <h5>Shopping Mall</h5>
+                <p class="text-muted">대한민국 최대 온라인 쇼핑몰<br>다양한 상품과 함께하는 쇼핑</p>
             </div>
             <div class="col-md-3">
                 <h6>고객센터</h6>
@@ -35,7 +35,7 @@
         </div>
         <hr>
         <div class="text-center text-muted">
-            <p>&copy; 2024 BookStore24. All rights reserved.</p>
+            <p>&copy; 2025 Shopping Mall. All rights reserved.</p>
         </div>
     </div>
 </footer>
