fix : Category 관련 기능 수정중

--- a/src/main/webapp/WEB-INF/views/fragments/header.html
+++ b/src/main/webapp/WEB-INF/views/fragments/header.html
@@ -41,6 +41,12 @@
                           th:text="${cartItemCount}"></span>
                 </a>
             </div>
+
+            <div class="nav-item position-relative">
+                <a class="nav-link" th:href="@{/item/search}">
+                    <i class="fas fa-magnifying-glass"></i> 검색
+                </a>
+            </div>
         </div>
     </div>
 </nav>
