--- a/src/main/webapp/resources/css/review.css
+++ b/src/main/webapp/resources/css/review.css
@@ -66,6 +66,12 @@ body {
     overflow: hidden;
 }
 
+#mainReviewImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;  /* 또는 'cover' 대신 'contain' */
+}
+
 .review-image img {
     width: 100%;
     height: 100%;
