conflict: merge conflict resolved

--- a/src/main/webapp/WEB-INF/views/fragments/header.html
+++ b/src/main/webapp/WEB-INF/views/fragments/header.html
@@ -41,10 +41,13 @@
                           th:text="${cartItemCount}"></span>
                 </a>
             </div>
-
             <div class="nav-item position-relative">
                 <a class="nav-link" th:href="@{/item/search}">
                     <i class="fas fa-magnifying-glass"></i> 검색
+
+            <div class="nav-item position-relative">
+                <a class="nav-link" th:href="@{/review}">
+                    <i class="fa-solid fa-camera-retro"></i> 리뷰
                 </a>
             </div>
         </div>
