fix : cart.js, review.js 내부의 fetch url 수정
- root-context.xml의 MapperScanner에 review.dao 관련 경로 설정
- hero banner, primary 색상으로 변경

--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -14,7 +14,7 @@
         <div class="row justify-content-center">
 
             <!-- Hero Banner -->
-            <div class="bg-black text-white p-5">
+            <div class="bg-primary text-white p-5">
                 <div class="row align-items-center">
                     <div class="col-md-8">
                         <h1 class="display-5 fw-bold">새로운 상품과의 만남</h1>
