--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -19,7 +19,7 @@
                     <div class="col-md-8">
                         <h1 class="display-5 fw-bold">새로운 상품과의 만남</h1>
                         <p class="lead">매일 업데이트되는 새로운 상품과 만나보세요</p>
-                        <a class="btn btn-light btn-lg" th:href="@{/item}">
+                        <a class="btn btn-light btn-lg" th:href="@{/item/list}">
                             상품 보러가기 <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
@@ -36,7 +36,7 @@
                         <i class="fas fa-trophy text-warning me-2"></i>
                         이달의 베스트 상품
                     </h2>
-                    <a th:href="@{/item}" class="btn btn-outline-primary btn-sm">
+                    <a th:href="@{/item/list}" class="btn btn-outline-primary btn-sm">
                         더보기 <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
@@ -70,7 +70,7 @@
                         <i class="fas fa-trophy text-warning me-2"></i>
                         신상품
                     </h2>
-                    <a th:href="@{/item}" class="btn btn-outline-primary btn-sm">
+                    <a th:href="@{/item/list}" class="btn btn-outline-primary btn-sm">
                         더보기 <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
