feat: 장바구니 기능 2차 추가
- 관싱상품 등록
- 상품 상세와 연동
- 장바구니 추가 검증
- 이미지 클릭시 이동

--- a/src/main/webapp/WEB-INF/views/item/detail.html
+++ b/src/main/webapp/WEB-INF/views/item/detail.html
@@ -176,7 +176,7 @@
                         </button>
                     </div>
 
-                    <button type="submit" formaction="/order/create" class="btn btn-order" id="order-btn">
+                    <button type="submit" formaction="/cart/order/create" class="btn btn-order" id="order-btn">
                         즉시 주문하기
                     </button>
                 </div>
