--- a/src/main/webapp/WEB-INF/views/item/search.html
+++ b/src/main/webapp/WEB-INF/views/item/search.html
@@ -18,7 +18,7 @@
     <div class="search-page">
         <!-- 검색 헤더 -->
         <div class="search-header">
-            <div class="container">
+            <div class="main-container">
                 <div class="search-hero">
                     <h1 class="search-title">
                         <i class="fas fa-search"></i>
