--- a/src/main/webapp/WEB-INF/views/review/review.html
+++ b/src/main/webapp/WEB-INF/views/review/review.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <div class="container">
+    <div class="main-container">
         <header class="review-header">
             <h1>상품 리뷰</h1>
             <div class="review-stats">
