--- a/src/main/webapp/WEB-INF/views/fragments/header.html
+++ b/src/main/webapp/WEB-INF/views/fragments/header.html
@@ -48,6 +48,31 @@
                     <i class="fas fa-magnifying-glass"></i> 검색
                 </a>
             </div>
+
+            <!-- Community Dropdown Menu -->
+            <div class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="communityDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fas fa-comments"></i> 커뮤니티
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="communityDropdown">
+                    <li>
+                        <a class="dropdown-item" th:href="@{/notice}">
+                            <i class="fas fa-bullhorn"></i> 공지사항
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" th:href="@{/itemquestion}">
+                            <i class="fas fa-question-circle"></i> 문의
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" th:href="@{/review}">
+                            <i class="fas fa-star"></i> 리뷰
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
         </div>
     </div>
 </nav>
